[package]
name = "salad2"
version = "0.0.1"
authors = ["Charles Reiss <cr4bd@virginia.edu>"]

build = "build.rs" # LARLRPOP preprocessing

[features]
default = ["strict-boolean-ops", "require-mux-default", "disallow-multiple-mux-default", "disallow-unreachable-options"]
strict-boolean-ops = []
strict-wire-widths-binary = []
require-mux-default = []
disallow-multiple-mux-default = []
disallow-unreachable-options = []

[profile.dev]
incremental = true

[profile.release]
lto = true
debug = true

# Parser runtime library
[dependencies.lalrpop-util]
version = "0.19.5"

# Parser library
[build-dependencies.lalrpop]
version = "0.19.5"

[dependencies.log]
version = "0.4.3"

[dependencies.serde_json]
version = "1.0"
